--- a/Abdisite.html
+++ b/Abdisite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="style.css">
 <link rel="icon" href="download.png">
 <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Concert+One|Fredoka+One&display=swap" rel="stylesheet">
 
