--- a/Abdisite.html
+++ b/Abdisite.html
@@ -3,7 +3,7 @@
 
 
 <head>
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="download.png">
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Concert+One|Fredoka+One&display=swap" rel="stylesheet">
     
